updated html text & darkmode styles

--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
             <h4 class="projects-card-title">Willy's Wonderland</h4>
             <p class="projects-card-description">
               Nicolas Cage fights a demonically-possessed alligator mascot with
-              a mop. What more could you possibly ask for?
+              a mop. What more could you possibly ask for? Basically Five Nights
+              at Freddy's the movie.
             </p>
           </div>
           <div class="projects-card-button-container">
@@ -149,7 +150,8 @@
             <h4 class="projects-card-title">Pig</h4>
             <p class="projects-card-description">
               A touching meditation on grief and a critique of the high-end
-              restaurant scene.
+              restaurant scene. Was originally marketed as a 'Taken' clone but
+              is probably one of Cage's (legit) best films.
             </p>
           </div>
           <div class="projects-card-button-container">
@@ -170,8 +172,8 @@
             <h4 class="projects-card-title">Bad Lieutenant</h4>
             <p class="projects-card-description">
               It's like watching a classic cop movie. Except all the actors are
-              on crack, the writers were fueled by crack and all the
-              production team & director were also on crack.
+              on crack, the writers were fueled by crack and all the production
+              team & director were also on crack.
             </p>
           </div>
           <div class="projects-card-button-container">
@@ -190,7 +192,11 @@
         <div class="projects-card">
           <div class="projects-card-text">
             <h4 class="projects-card-title">Face/Off</h4>
-            <p class="projects-card-description"></p>
+            <p class="projects-card-description">
+              John Woo directing a high-tech wife-swap with guns. Nicholas Cage
+              was also in 'Con-air' & 'The Rock' around this time which has got
+              to be the best action movie run of all time!
+            </p>
           </div>
           <div class="projects-card-button-container">
             <button class="projects-card-button">
@@ -207,8 +213,12 @@
 
         <div class="projects-card">
           <div class="projects-card-text">
-            <h4 class="projects-card-title"></h4>
-            <p class="projects-card-description"></p>
+            <h4 class="projects-card-title">National Treasure</h4>
+            <p class="projects-card-description">
+              Nicholas Cage in a PG Disney movie which is basically Mission
+              Impossible meets Indiana Jones. Stealing the Declaration of
+              Indepenence is easy - making it entertaining is tough!
+            </p>
           </div>
           <div class="projects-card-button-container">
             <button class="projects-card-button">
@@ -225,8 +235,14 @@
 
         <div class="projects-card">
           <div class="projects-card-text">
-            <h4 class="projects-card-title"></h4>
-            <p class="projects-card-description"></p>
+            <h4 class="projects-card-title">
+              The Unbearable Weight of Massive Talent
+            </h4>
+            <p class="projects-card-description">
+              Nicholas Cage is...Nicholas Cage! The Unbearable Weight of Massive
+              Talent may have indeed been too much to bear with a lesser talent,
+              but Nicolas Cage is more than enough to hold it up.
+            </p>
           </div>
           <div class="projects-card-button-container">
             <button class="projects-card-button">
@@ -246,27 +262,36 @@
         <h3 class="announcements-title">Announcements</h3>
         <div class="announcements-container">
           <div class="announcements-element announcements-element-one">
-            <p class="announcements-bold-text">Announcement 1</p>
+            <p class="announcements-bold-text">
+              Actor Trips on Shrooms with cat
+            </p>
             <p class="announcements-description-text">
-              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
-              asperiores, eligendi nam reiciendis esse magni.
+              Earlier in his career Nicholas Cage owned a cat named Lewis who
+              enjoyed partaking in Cage’s stash of magic mushrooms. Finally,
+              Cage decided he should have some, too. “I remember lying in my bed
+              for hours,” he said, “and Lewis was on the desk across from the
+              bed for hours, staring at each other … not moving. But he would
+              stare at me, and I had no doubt that he was my brother.”
             </p>
           </div>
           <div class="announcements-element">
             <div class="announcements-element">
-              <p class="announcements-bold-text">Announcement 2</p>
+              <p class="announcements-bold-text">
+                Balding Hollywood Star Buys Dinosaur Skull
+              </p>
               <p class="announcements-description-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
-                asperiores, eligendi nam reiciendis esse
+                Cage purchased a skull from a Tyrannosaurus baatar for $276,000
+                in 2007 - a fossil that was later determined to be stolen.
               </p>
             </div>
           </div>
           <div class="announcements-element">
             <div class="announcements-element">
-              <p class="announcements-bold-text">Announcement 3</p>
+              <p class="announcements-bold-text">Sex Sells</p>
               <p class="announcements-description-text">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ea
-                asperiores, eligendi nam reiciendis esse
+                In October 2017, Cage aficionados in Japan were delighted to see
+                the actor’s face emblazoned on packages of a crunchy corn snack
+                called Deluxe Umaibou Nicolastick.
               </p>
             </div>
           </div>
