updated css hover on cards & added favicon

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
       rel="stylesheet"
     />
+    <link href="img/admin.ico" rel="icon" type="image/x-icon" />
     <script src="main.js" defer></script>
     <title>Admin Dashboard</title>
   </head>
